--- a/style/style.css
+++ b/style/style.css
@@ -5,4 +5,17 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  background-color: black;
+}
+
+.text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
