--- a/style/style.scss
+++ b/style/style.scss
@@ -4,3 +4,16 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
+
+body{
+    background-color: black;
+}
+
+.text-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
