--- a/style/style.css
+++ b/style/style.css
@@ -7,10 +7,10 @@ html {
 }
 
 body {
-  background-color: black;
+  background-color: blanchedalmond;
 }
 
-.text-box {
+.heading-text {
   position: absolute;
   top: 50%;
   left: 50%;
