--- a/style/style.css
+++ b/style/style.css
@@ -6,11 +6,7 @@ html {
           box-sizing: border-box;
 }
 
-body {
-  background-color: blanchedalmond;
-}
-
-.heading-text {
+.header-text {
   position: absolute;
   top: 50%;
   left: 50%;
