--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -1,8 +1,25 @@
-
-
 .heading-block{
     position: absolute;
     width: 1440px;
     height: 1024px;
-    background: url(View.jpg);
-    }
+    background-image: url(View.jpg);
+}
+
+.heading-text{
+position: absolute;
+width: 595px;
+height: 97px;
+
+font-family: Song Myung;
+font-style: normal;
+font-weight: normal;
+font-size: 80px;
+line-height: 100px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #FFFFFF;
+
+backdrop-filter: blur(4px);
+}
