--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -1,25 +1,45 @@
 .heading-block{
-    position: absolute;
-    width: 1440px;
+    position: relative;
+    width: 100%;
     height: 1024px;
-    background-image: url(View.jpg);
+    background-size: cover;
+    background-position: top;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    background-image: url(../media/View.jpg);
 }
 
-.heading-text{
-position: absolute;
-width: 595px;
-height: 97px;
+#well{
+    position: absolute;
+    width: 595px;
+    height: 97px;
+    font-family: Song Myung;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 80px;
+    line-height: 100px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    backdrop-filter: blur(4px);
+}
 
-font-family: Song Myung;
-font-style: normal;
-font-weight: normal;
-font-size: 80px;
-line-height: 100px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #FFFFFF;
-
-backdrop-filter: blur(4px);
+#hai{
+    position: absolute;
+    width: 583px;
+    height: 119px;
+    font-family: Shojumaru;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 90px;
+    line-height: 119px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
