--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -1,19 +1,4 @@
-.heading-block{
-    position: relative;
-    width: 100vw;
-    height: 1024px;
-    background-size: cover;
-    background-position: top;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    background-image: url(../media/View.jpg);
-}
-
-#well{
-    position: absolute;
+.wel{
     width: 595px;
     height: 97px;
     font-family: Song Myung;
@@ -29,8 +14,7 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-#hai{
-    position: absolute;
+.sha{
     width: 583px;
     height: 119px;
     font-family: Shojumaru;
@@ -42,11 +26,11 @@
     align-items: center;
     text-align: center;
     color: #FFFFFF;
+    backdrop-filter: blur(4px);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-#corona{
-    position: absolute;
+.corona{
     width: 421px;
     height: 66px;
     font-family: Song Myung;
@@ -58,4 +42,6 @@
     align-items: center;
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(4px);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
