--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,34 @@ html{
     font-size: 62.5%;
     box-sizing: border-box;
 }
+
+.heading-block{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: top;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    background-image: url(../media/Nightview.jpeg);
+    background-color: black;
+}
+
+.heading-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    animation-duration: 5s;
+    animation: shanghai;
+}
+
+@keyframes shanghai{
+    from{
+        
+    }
+}
