--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -1,22 +1,7 @@
-.wel{
-    width: 595px;
-    height: 97px;
-    font-family: Song Myung;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 80px;
-    line-height: 100px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-    backdrop-filter: blur(4px);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 .sha{
-    width: 583px;
-    height: 119px;
+    position: absolute;
+    width: 753px;
+    height: 238px;
     font-family: Shojumaru;
     font-style: normal;
     font-weight: normal;
@@ -26,22 +11,7 @@
     align-items: center;
     text-align: center;
     color: #FFFFFF;
-    backdrop-filter: blur(4px);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(4px);
 }
 
-.corona{
-    width: 421px;
-    height: 66px;
-    font-family: Song Myung;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 30px;
-    line-height: 37px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(4px);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
