--- a/scss/_medq.scss
+++ b/scss/_medq.scss
@@ -1,4 +1,8 @@
-    
+$tablet: 600px;
+$desktop: 1100px;
+$laptop: 900px;  
+
+
     @mixin desktop {
     @media(min-width: #{$desktop}) {
       @content;
