--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -1,4 +1,4 @@
-.explore{
+.extitle{
 position: absolute;
 width: 1041px;
 height: 170px;
@@ -16,3 +16,4 @@ color: #000000;
 border: 1px solid #000000;
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
