--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -13,5 +13,14 @@
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(4px);
+    @include tablet {
+        font-size: 6rem;
+        letter-spacing: 1.8rem;
+      }
+      @include laptop {
+        font-size: 10rem;
+        letter-spacing: 2.2rem;
+      }
+    
 }
 
