--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -1,7 +1,7 @@
 .extitle{
-position: absolute;
+position: relative;
 width: 1041px;
-height: 170px;
+height: 200px;
 left: 199px;
 top: 64px;
 font-family: SeoulHangang CB;
@@ -15,5 +15,6 @@ text-align: center;
 color: #000000;
 border: 1px solid #000000;
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+background: #7ABFF0;
+opacity: 0.5;
 }
-
