--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -1,3 +1,5 @@
+@import "_medq.scss";
+
 .sha{
     position: absolute;
     width: 701px;
@@ -13,6 +15,7 @@
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(4px);
+
     @include tablet {
         font-size: 6rem;
         letter-spacing: 1.8rem;
