--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,10 +18,10 @@ body{
   background-color: cadetblue;
 }
 
-.heading-block{
-    position: absolute;
+.d1{
+    position: relative;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background-size: cover;
     background-position: top;
     display: flex;
@@ -44,13 +44,15 @@ body{
 
 #explore{
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0;
   background-image: url(../media/Shang.jpg);
+  clip-path: polygon(0 7%, 100% 13%, 100% 100%, 0% 100%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
