--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -1,20 +1,45 @@
-.extitle{
-position: relative;
-width: 1041px;
-height: 200px;
-left: 199px;
-top: 64px;
-font-family: SeoulHangang CB;
-font-style: normal;
-font-weight: normal;
-font-size: 90px;
-line-height: 90px;
-display: flex;
-align-items: center;
-text-align: center;
-color: #000000;
-border: 1px solid #000000;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-background: #7ABFF0;
-opacity: 0.5;
+.extitle{    
+    text-align: center;
+    font-size: 10vh;
+    font-family: 'Bree Serif', serif;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: #7ABFF0;
+}
+
+.flex-parent{
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    text-align: center ;
+    align-items: center;
+    border-image: fill;
+    @include tablet {
+        font-size: 6rem;
+        letter-spacing: 1.8rem;
+      }
+      @include laptop {
+        font-size: 10rem;
+        letter-spacing: 2.2rem;
+      }
+}
+
+.flex-child{
+    height: 40vh;
+    background-color: #ECEFF1;
+    margin: 10px;
+    width: 33.3%;
+    font-size: 500%;
+    border-image: fill;
+}
+
+#flex-child{
+    flex-grow: 1;
+    display: flex;
+    width: 33.3%;
+}
+
+#flex-grow2{
+    flex-grow: 2;
+    width: 33.3%;
+    font-size: 100%;
 }
