--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -1,16 +1,17 @@
 .extitle{    
     text-align: center;
-    font-size: 10vh;
+    font-size: 8vh;
     font-family: 'Bree Serif', serif;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background: #7ABFF0;
+    margin-top: 6rem;
 }
 
-.flex-parent{
+.sites{
     height: 100vh;
     display: flex;
     flex-direction: row;
-    text-align: center ;
+    text-align: center;
     align-items: center;
     border-image: fill;
     @include tablet {
@@ -23,23 +24,22 @@
       }
 }
 
-.flex-child{
+.yu{
     height: 40vh;
     background-color: #ECEFF1;
     margin: 10px;
-    width: 33.3%;
-    font-size: 500%;
+    width: 40rem;
     border-image: fill;
 }
 
-#flex-child{
+.pearl{
     flex-grow: 1;
     display: flex;
-    width: 33.3%;
+    width: 40rem;
 }
 
-#flex-grow2{
+.nanjing{
     flex-grow: 2;
     width: 33.3%;
-    font-size: 100%;
+    font-size: 40rem;
 }
