--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -14,6 +14,7 @@
     text-align: center;
     align-items: center;
     border-image: fill;
+
     @include tablet {
         font-size: 6rem;
         letter-spacing: 1.8rem;
@@ -25,21 +26,25 @@
 }
 
 .yu{
-    height: 40vh;
-    background-color: #ECEFF1;
     margin: 10px;
     width: 40rem;
     border-image: fill;
-}
-
-.pearl{
-    flex-grow: 1;
-    display: flex;
-    width: 40rem;
+    padding: 7rem;
 }
 
 .nanjing{
-    flex-grow: 2;
-    width: 33.3%;
-    font-size: 40rem;
+    flex-grow: 1;
+    width: 40rem;
+    display: flex;
+    padding: 7rem;
 }
+
+
+.pearl{
+    flex-grow: 2;
+    display: flex;
+    width: 40rem;
+    padding: 7rem;
+}
+
+
