--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -38,6 +38,7 @@
     background-color: white;
     font-family: 'Permanent Marker', cursive;
     margin-top: 6rem;
+    text-align: center;
     @include laptop{
         font-size: 2rem;    
     }
@@ -60,6 +61,7 @@
     background-color: white;
     font-family: 'Permanent Marker', cursive;
     margin-top: 6rem;
+    text-align: center;
     @include laptop{
         font-size: 2rem;    
     }
@@ -82,6 +84,7 @@
     background-color: white;
     font-family: 'Permanent Marker', cursive;
     margin-top: 6rem;
+    text-align: center;
     @include laptop{
         font-size: 2rem;    
     }
