--- a/scss/_hovers.scss
+++ b/scss/_hovers.scss
@@ -20,6 +20,17 @@
     filter: grayscale(0);
 }
 
+.road{
+    transition: all 1.0s;
+    height: 30rem;
+    filter: grayscale(100);
+    border-radius: 5rem;
+}
+
+.road:hover{
+    transform: scale(1.3);
+    filter: grayscale(0);
+
 
 .nanjing:hover > .road{
     opacity: 0.3;
