--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "_animations.scss";
 @import "_d1.scss";
 @import "_d2.scss";
+@import "_d3.scss";
 @import "_medq.scss";
 
 @include tablet{}
