--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -7,7 +7,7 @@
     font-family: Shojumaru;
     font-style: normal;
     font-weight: normal;
-    font-size: 2rem;
+    font-size: 3rem;
     line-height: 119px;
     display: flex;
     align-items: center;
@@ -15,6 +15,7 @@
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(4px);
+    margin-bottom:auto;
 
     @include tablet {
         font-size: 2rem;
