--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -35,7 +35,8 @@
 .yugarden{
     position: relative;
     font-size: 5rem;
-    background-color: white;
+    background-color: #263238;
+    color: #18FFFF;
     font-family: 'Permanent Marker', cursive;
     margin-top: 6rem;
     text-align: center;
@@ -58,7 +59,8 @@
 .nanjingroad{
     position: relative;
     font-size: 5rem;
-    background-color: white;
+    background-color: #263238;
+    color: #18FFFF;
     font-family: 'Permanent Marker', cursive;
     margin-top: 6rem;
     text-align: center;
@@ -81,7 +83,8 @@
 .pearltower{
     position: relative;
     font-size: 5rem;
-    background-color: white;
+    background-color: #263238;
+    color: #18FFFF;
     font-family: 'Permanent Marker', cursive;
     margin-top: 6rem;
     text-align: center;
