--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,5 +63,26 @@ body{
   }
 }
 
-
+#food{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: top;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background-image: url(../media/Restaurant.jpg);
+  clip-path: polygon(0 6%, 100% 3%, 100% 100%, 0% 100%);
+  @include tablet {
+    font-size: 6rem;
+    letter-spacing: 1.8rem;
+  }
+  @include laptop {
+    font-size: 10rem;
+    letter-spacing: 2.2rem;
+  }
+}
 
