--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,26 +63,22 @@ body{
   }
 }
 
-#food{
-  position: relative;
+.restaurant{
   width: 100vw;
   height: 100vh;
-  background-size: cover;
-  background-position: top;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  text-align: center ;
   align-items: center;
-  justify-content: center;
-  margin: 0;
+  background-size: cover;
   background-image: url(../media/Restaurant.jpg);
-  clip-path: polygon(0 9%, 100% 6%, 100% 100%, 0% 100%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
   }
   @include laptop {
     font-size: 10rem;
-    letter-spacing: 2.2rem;
+    letter-spacing: 0;
   }
 }
 
