--- a/scss/_d3.scss
+++ b/scss/_d3.scss
@@ -1,10 +1,10 @@
 .food{
     height: 40vh;
-    background-color: #ECEFF1;
     margin: 10px;
     width: 33.3%;
     font-size: 500%;
     border-image: fill;
+    margin-top: -20rem;
 }
 
 #food{
@@ -26,15 +26,29 @@
     flex-direction: column;
     padding: 3rem;
     margin: 2rem;
-    border: 7px solid #263238;
     border-radius: 15px;
     text-align: center;
     color: darkblue;
+    border: 7px solid #263238;
     font-size: 3rem;
     font-family: 'Righteous';
     text-transform: uppercase;
+    width: 45vw;
 }
 
 .food2{
     color: darkcyan;
+    text-transform: initial;
+}
+
+.bao{
+    border: 4px solid whitesmoke;
+}
+
+.fish{
+    border: 4px solid whitesmoke;
+}
+
+.dimsum{
+    border: 4px solid whitesmoke;
 }
