--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,6 +72,7 @@ body{
   align-items: center;
   background-size: cover;
   background-image: url(../media/Restaurant.jpg);
+  clip-path: polygon(0 9%, 100% 4%, 100% 100%, 0% 100%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
