--- a/scss/_d4.scss
+++ b/scss/_d4.scss
@@ -1,13 +1,14 @@
-.extitle{    
+.culttitle{    
     text-align: center;
     font-size: 8vh;
     font-family: 'Bree Serif', serif;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background: #7ABFF0;
     margin-top: 14rem;
+    backdrop-filter: blur(4px);
+    color: whitesmoke;
 }
 
-.sites{
+.facts{
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -95,5 +96,3 @@
         font-size: 2rem;
     }
 }  
-
-
