--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ body{
   justify-content: center;
   margin: 0;
   background-image: url(../media/ShangCult.jpg);
+  clip-path: polygon(0 9%, 100% 6%, 100% 100%, 0% 100%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
