--- a/scss/_d4.scss
+++ b/scss/_d4.scss
@@ -22,7 +22,7 @@
       }
       @include laptop {
         font-size: 10rem;
-        letter-spacing: 2.2rem;
+        letter-spacing: 1rem;
       }
 }
 
@@ -31,10 +31,32 @@
     width: 40rem;
     border-image: fill;
     padding: 15rem;
+    background: rgba(196, 196, 196, 0.7);
+    display: flex;
+}
+
+.word{
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    color: black;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-family: 'Shojumaru';
+    width: 380px;
+    margin-top: 4rem;
 }
 
 .word-2{
     position: absolute;
+    text-align: center;
+    align-items: center;
+    color: black;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-family: 'Shojumaru';
+    width: 380px;
+    margin-top: 4rem;
 }
 
 .fact2{
@@ -42,6 +64,7 @@
     display: flex;
     padding: 15rem;
     flex-direction: relative;   
+    background: rgba(196, 196, 196, 0.7);
 }
 
 .trial1{
@@ -50,4 +73,23 @@
     text-align: center;
     align-items: center;
     border-image: fill;
+}
+
+.trial2{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    border-image: fill;
+}
+
+.tags{
+    z-index: 1;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+
+.rock{
+    z-index: 1;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
 }
