--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "_d2.scss";
 @import "_d3.scss";
 @import "_d4.scss";
+@import "_d5.scss";
 @import "_medq.scss";
 
 @include tablet{}
@@ -101,6 +102,29 @@ body{
   margin: 0;
   background-image: url(../media/ShangCult.jpg);
   clip-path: polygon(0 9%, 100% 6%, 100% 100%, 0% 100%);
+  @include tablet {
+    font-size: 6rem;
+    letter-spacing: 1.8rem;
+  }
+  @include laptop {
+    width: 100vw;
+    height: 100vh;
+    font-size: 10rem;
+    letter-spacing: 2.2rem;
+  }
+}
+
+.airplane{
+  width: 375px;
+  height: 812px;
+  background-size: cover;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background-image: url(../media/Xiamen.jpg);
+  clip-path: polygon(50% 12%, 100% 5%, 100% 100%, 0 100%, 0 5%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
