--- a/scss/_d5.scss
+++ b/scss/_d5.scss
@@ -11,9 +11,11 @@
     flex-grow: 1;
     display: flex;
     position: relative;
+    margin: 3rem;
     width: 569px;
     height: 375px;
     background: rgba(0, 0, 0, 0.85);
+    border-radius: 15rem;
 }
 
 .trip{
@@ -27,7 +29,7 @@
     display: flex;
     flex-direction: column;
     padding: 3rem;
-    margin: 2rem;
+    margin: 4rem;
     text-align: center;
     color: darkblue;
     font-size: 3rem;
