--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -36,9 +36,13 @@
     top: 0rem;
 }
 
-.navigation_checkbox:checked + .navigation_button .navigation_icon::after {
-    transform: rotate(-495deg);
+.navigation_checkbox:checked + .navigation_button .navigation_icon::before {
+    transform: rotate(495deg);
     top: 0rem;
+}
+
+.navigation_checkbox:checked + .navigation_button .navigation_icon {
+    background-color: transparent;
 }
 
 *, *::before, *::after {
@@ -99,5 +103,49 @@ div{
     position: absolute;
     top: 1rem;
     left: 0;
+}
+
+.navigation_button {
+    background-color: white;
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 6rem;
+    right: 6rem;
+    z-index: 10000;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,0.5);
+    text-align: center;
+    cursor: pointer;
+}
+
+.navigation_checkbox:checked~.navigation_nav {
+    display: initial;
+    opacity: 1;
+    z-index: 200;
+    width: 100%;
+}
+
+.navigation_item {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 5rem;
+    margin: 1rem;
+}
+
+i {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+.navigation_list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center;
+    width: 100%;
+    transition: 2.0s;
+    color: whitesmoke;
 }
 
