--- a/scss/_d3.scss
+++ b/scss/_d3.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     padding: 3rem;
-    margin: 2rem;
+    margin: 5rem;
     border-radius: 15px;
     text-align: center;
     color: darkblue;
@@ -51,4 +51,14 @@
 
 .dimsum{
     border: 4px solid whitesmoke;
+}
+
+.tags{
+    align-items: center;
+    text-align: center;
+}
+
+.rock{
+    align-items: center;
+    text-align: center;
 }
