--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -69,6 +69,9 @@
     background-image: radial-gradient( rgb(14, 135, 151), rgb(5, 85, 109));
     z-index: 30;
     transition: .8s;
+}
+
+.navigation_checkbox:checked~.navigation_background {
     transform: scale(80);
 }
 
@@ -145,7 +148,6 @@ i {
     list-style: none;
     text-align: center;
     width: 100%;
-    transition: 2.0s;
     color: whitesmoke;
 }
 
