--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -68,7 +68,7 @@
     right: 6.5rem;
     background-image: radial-gradient( rgb(14, 135, 151), rgb(5, 85, 109));
     z-index: 30;
-    transition: .8s;
+    transition: 0.8s;
 }
 
 .navigation_checkbox:checked~.navigation_background {
