im better than brian

--- a/scss/_d4.scss
+++ b/scss/_d4.scss
@@ -27,8 +27,8 @@
 }
 
 .fact1{
-    margin: 10px;
-    width: 60rem;
+    margin: 5rem;
+    width: 70rem;
     border-image: fill;
     padding: 15rem;
     background: rgba(196, 196, 196, 0.7);
@@ -60,11 +60,12 @@
 }
 
 .fact2{
-    width: 60rem;
+    width: 70rem;
     display: flex;
     padding: 15rem;
     flex-direction: relative;   
     background: rgba(196, 196, 196, 0.7);
+    margin: 5rem;
 }
 
 .trial1{
