--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -148,6 +148,10 @@ i {
     list-style: none;
     text-align: center;
     width: 100%;
+}
+
+.navigation_list{
+    text-decoration: none;
     color: whitesmoke;
 }
 
