--- a/scss/_hovers.scss
+++ b/scss/_hovers.scss
@@ -65,7 +65,7 @@
 
  .bao {
     top: 15rem;
-    left: 0;
+    left: -10rem;
     height: 25vh;
     width: 45vh;
     
@@ -80,7 +80,7 @@
 
  .dimsum{
      top: 4rem;
-     left: 65%;
+     left: 45%;
      height: 25vh;
      width: 45vh;
  }
