--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -2,8 +2,6 @@
 
 .sha{
     position: absolute;
-    width: 761px;
-    height: 153px;
     font-family: Shojumaru;
     font-style: normal;
     font-weight: normal;
@@ -17,13 +15,15 @@
     backdrop-filter: blur(4px);
     margin-bottom:auto;
 
-    @include tablet {
-        font-size: 2rem;
-        letter-spacing: 1.8rem;
-      }
-      @include laptop {
-        font-size: 10rem;
-        letter-spacing: 2.2rem;
+    @include desktop {
+      width: 761px;
+      height: 153px;
+      font-size: 10rem;
+    }
+    @include phone {
+        width: 305px;
+        height: 75px;
+        font-size: 5rem;
       }
 }
 
