--- a/scss/_medq.scss
+++ b/scss/_medq.scss
@@ -1,19 +1,28 @@
-$tablet: 600px;
-$desktop: 1100px;
-$laptop: 900px;  
+$phone: 600px;
+$tablet: 900px;
+$laptop: 1100px; 
+$desktop: 1100px; 
 
-@mixin desktop {
+@mixin phone {
+  @media (max-width: #{$phone}) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media(min-width: #{$tablet}) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media(min-width: #{$laptop}) {
+    @content;
+  }
+
+}
+  @mixin desktop {
     @media(min-width: #{$desktop}) {
       @content;
     }
-  }
-@mixin laptop {
-    @media(min-width: #{$laptop}) {
-      @content;
-    }
-  }
-@mixin tablet {
-    @media(min-width: #{$tablet}) {
-      @content;
-    }
-  }
+ }
