--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ html{
 }
 
 body{
-  background-color: cadetblue;
+  background-color:#263238;
 }
 
 .hello{
@@ -35,6 +35,7 @@ body{
     margin: 0;
     background-image: url(../media/Nightview.jpeg);
     clip-path: polygon(50% 94%, 96% 85%, 96% 0, 4% 0, 4% 85%);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
     
     @include tablet {
       font-size: 6rem;
@@ -80,7 +81,7 @@ body{
   align-items: center;
   background-size: cover;
   background-image: url(../media/Restaurant.jpg);
-  clip-path: polygon(50% 90%, 99% 95%, 99% 7%, 1% 7%, 1% 95%);
+  clip-path: polygon(50% 90%, 97% 95%, 97% 7%, 3% 7%, 3% 95%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
@@ -103,7 +104,7 @@ body{
   justify-content: center;
   margin: 0;
   background-image: url(../media/ShangCult.jpg);
-  clip-path: polygon(0 9%, 100% 6%, 100% 100%, 0% 100%);
+  clip-path: polygon(15% 0, 85% 0, 95% 8%, 95% 95%, 95% 95%, 50% 100%, 5% 95%, 5% 8%);
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
