--- a/scss/_d1.scss
+++ b/scss/_d1.scss
@@ -35,13 +35,30 @@
   font-family: 'Permanent Marker', cursive;
   margin-top: 20rem;
   text-align: center;
-  @include laptop{
-      font-size: 2rem;    
-  }
-  @include tablet{
-      font-size: 2rem;
-  }
+  width: 70rem;
+
+  @include desktop {
+  font-size: 2rem;
+}
+  @include phone {
+  font-size: 2rem;
+  width: 25rem;
+    }
 }  
 
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 5rem;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  margin-top: 1rem;
+  color: yellow;
+}
 
 
