--- a/scss/_d2.scss
+++ b/scss/_d2.scss
@@ -5,6 +5,16 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background: #7ABFF0;
     margin-top: 14rem;
+
+
+    @include desktop {
+        font-size: 8vh;
+      }
+      @include phone {
+        width: 305px;
+        height: 175px;
+        font-size: 4rem;
+        }
 }
 
 .sites{
