--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,10 +16,23 @@ html{
     padding: 0;
     font-size: 62.5%;
     box-sizing: border-box;
+    
 }
 
 body{
   background-color:#263238;
+
+  @include desktop {
+    width: 761px;
+    height: 153px;
+    font-size: 10rem;
+  }
+  @include phone {
+      width: 305px;
+      height: 75px;
+      font-size: 5rem;
+    }
+
 }
 
 .hello{
@@ -27,7 +40,6 @@ body{
     height: 812px;
     position: relative;
     background-size: cover;
-    background-position: top;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,16 +48,18 @@ body{
     background-image: url(../media/Nightview.jpeg);
     clip-path: polygon(50% 94%, 96% 85%, 96% 0, 4% 0, 4% 85%);
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
-    
-    @include tablet {
-      font-size: 6rem;
-      letter-spacing: 1.8rem;
-    }
-    @include laptop {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @include desktop {
       width: 100vw;
       height: 100vh;
       font-size: 10rem;
       letter-spacing: 2.2rem;
+    }
+    @include phone {
+      font-size: 5rem;
     }
 }
 
@@ -60,15 +74,17 @@ body{
   margin: 0;
   background-image: url(../media/Night.jpg);
   clip-path: polygon(14% 2%, 86% 2%, 98% 10%, 98% 100%, 2% 100%, 2% 10%);
-  @include tablet {
-    font-size: 6rem;
-    letter-spacing: 1.8rem;
-  }
-  @include laptop {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  @include desktop {
     width: 100vw;
     height: 100vh;
     font-size: 10rem;
     letter-spacing: 2.2rem;
+  }
+  @include phone {
+    font-size: 5rem;
   }
 }
 
@@ -82,6 +98,9 @@ body{
   background-size: cover;
   background-image: url(../media/Restaurant.jpg);
   clip-path: polygon(50% 90%, 97% 95%, 97% 7%, 3% 7%, 3% 95%);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
@@ -105,6 +124,9 @@ body{
   margin: 0;
   background-image: url(../media/ShangCult.jpg);
   clip-path: polygon(15% 0, 85% 0, 95% 8%, 95% 95%, 95% 95%, 50% 100%, 5% 95%, 5% 8%);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
@@ -128,6 +150,9 @@ body{
   margin: 0;
   background-image: url(../media/Xiamen.jpg);
   clip-path: polygon(50% 12%, 100% 5%, 100% 100%, 0 100%, 0 5%);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   @include tablet {
     font-size: 6rem;
     letter-spacing: 1.8rem;
