--- a/scss/_hovers.scss
+++ b/scss/_hovers.scss
@@ -1,3 +1,5 @@
+@import "_medq.scss";
+
 .sha:hover{
     transform: scale(1.3);
     transition: all 1.0s;
@@ -14,6 +16,14 @@
     height: 30rem;
     filter: grayscale(100);
     border-radius: 5rem;
+    @include desktop {
+      }
+      @include phone {
+        width: 305px;
+        height: 175px;
+        font-size: 4rem;
+        margin-top: -30px;
+        }
 }
 
 .garden:hover{
@@ -26,6 +36,15 @@
     height: 30rem;
     filter: grayscale(100);
     border-radius: 5rem;
+
+    @include desktop {
+      }
+      @include phone {
+        width: 305px;
+        height: 175px;
+        font-size: 4rem;
+        margin-top: 115px;
+        }
 }
 
 .road:hover{
@@ -38,6 +57,16 @@
     height: 30rem;
     filter: grayscale(100);
     border-radius: 5rem;
+
+    @include desktop {
+      }
+      @include phone {
+        width: 305px;
+        height: 175px;
+        font-size: 4rem;
+        margin-top: -25px;
+        }
+
 }
 
 .tower:hover{
