--- a/scss/_hovers.scss
+++ b/scss/_hovers.scss
@@ -80,11 +80,17 @@
     //width: 60rem;
     height: 60rem;
     width: 40rem;
+
+@include phone {
+    width: 305px;
+    height: 75px;
+    margin-left: -50rem;
+    }
 }
 
 .gallery {
     position: relative;
- }
+}
 
 .gang {
     height: 30rem;
@@ -97,7 +103,12 @@
     left: -16rem;
     height: 25vh;
     width: 45vh;
-    
+    @include phone {
+        height: 15vh;
+        width: 30vh;
+        margin-left: 225px;
+        margin-top: 150px;
+        }
  }
 
  .fish{
@@ -105,6 +116,12 @@
      right: -15rem;
      height: 25vh;
      width: 45vh;
+     @include phone {
+        height: 15vh;
+        width: 30vh;
+        margin-right: 146px;
+        margin-top: 80px;
+        }
  }
 
  .dimsum{
@@ -112,6 +129,12 @@
      left: 20%;
      height: 25vh;
      width: 45vh;
+     @include phone {
+        height: 15vh;
+        width: 30vh;
+        margin-top: 150px;
+        margin-left: 4px;
+        }
  }
 
  .gang:hover{
