--- a/scss/_d3.scss
+++ b/scss/_d3.scss
@@ -56,8 +56,8 @@
     @include phone {
       width: 305px;
       height: 110px;
-      font-size: 1rem;
-      margin-left: -30px;
+      font-size: 13px;
+      margin-left: -37px;
       }
 }
 
