--- a/scss/_d4.scss
+++ b/scss/_d4.scss
@@ -6,6 +6,14 @@
     margin-top: 14rem;
     backdrop-filter: blur(4px);
     color: whitesmoke;
+    @include desktop {
+    }
+    @include phone {
+        width: 30rem;
+        height: 10rem;
+        font-size: 4rem;
+        margin-top: 20rem;
+      }
 }
 
 .facts{
@@ -16,16 +24,15 @@
     align-items: center;
     border-image: fill;
 
-    @include tablet {
-        font-size: 6rem;
-        letter-spacing: 1.8rem;
-      }
-      @include laptop {
+    @include desktop {
         font-size: 10rem;
         letter-spacing: 1rem;
-      }
 }
+    @include phone{
+        flex-direction: column;
+    }
 
+}
 .fact1{
     margin: 5rem;
     width: 70rem;
@@ -33,6 +40,12 @@
     padding: 15rem;
     background: rgba(196, 196, 196, 0.7);
     display: flex;
+    @include phone {
+        width: 30rem;
+        height: 10rem;
+        font-size: 4rem;
+      }
+    
 }
 
 .word{
@@ -45,6 +58,13 @@
     font-family: 'Shojumaru';
     width: 380px;
     margin-top: 4rem;
+    @include phone {
+        width: 30rem;
+        height: 10rem;
+        margin-left: -15rem;
+        font-size: 3rem;
+        margin-top: -10rem;
+    }
 }
 
 .word-2{
@@ -57,6 +77,11 @@
     font-family: 'Shojumaru';
     width: 380px;
     margin-top: 4rem;
+    @include phone {
+        width: 30rem;
+        height: 10rem;
+        font-size: 4rem;
+    }
 }
 
 .fact2{
@@ -66,6 +91,9 @@
     flex-direction: relative;   
     background: rgba(196, 196, 196, 0.7);
     margin: 5rem;
+    @include phone {
+        display: none;
+    }
 }
 
 .trial1{
@@ -87,6 +115,13 @@
 .tags{
     z-index: 1;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+    @include phone {
+        width: 28rem;
+        height: 20rem;
+        margin-left: -14rem;
+        font-size: 3rem;
+        margin-top: -10rem;
+    }
 }
 
 
